--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,34 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <!--0.-->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.jboss.arquillian</groupId>
+                <artifactId>arquillian-bom</artifactId> <!-- bom Bill of Material-->
+                <version>1.4.0.Final</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
+        <!-- use this when using java 9+ : -->
+        <dependency>
+            <groupId>com.sun</groupId>
+            <artifactId>tools</artifactId>
+            <version>1.6.0</version>
+            <scope>system</scope>
+            <systemPath>C:/Program Files/Java/jdk8u222-b10/lib/tools.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
@@ -37,6 +63,23 @@
             <artifactId>apiee-core</artifactId>
             <version>1.0.8</version>
         </dependency>
+
+        <!-- 1. Arquillian JUnit integration framework (required at all times) -->
+        <dependency>
+            <groupId>org.jboss.arquillian.junit</groupId>
+            <artifactId>arquillian-junit-container</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- 2. Arquillian container adapter for the target container-->
+        <dependency>
+            <groupId>io.openliberty.arquillian</groupId>
+            <artifactId>arquillian-liberty-managed</artifactId>
+            <version>1.0.6</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
     <!-- To run admincenter use the following commands in the application directory: -->
@@ -48,10 +91,26 @@
 
     <!-- To generate and view swagger-ui:
          Package and deploy the war and start the appserver.
-         Navigate to http://localhost:9080/JAXRSBasic/resources/apiee/
+         Navigate to http://localhost:9080/<appname>/<apppath>/apiee/
+                  ie http://localhost:9080/hellorest/<apppath>/apiee/
      -->
     <build>
         <plugins>
+            <!-- Run and verify ...IT.java-tests -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.22.2</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <!--<plugin>
                 <groupId>net.wasdev.wlp.maven.plugins</groupId>
                 <artifactId>liberty-maven-plugin</artifactId>
