Use liberty-maven-plugin now.

--- a/pom.xml
+++ b/pom.xml
@@ -112,12 +112,8 @@
 
     </dependencies>
 
-    <!-- To run admincenter use the following commands in the application directory: -->
-    <!-- mvn liberty:create-server creates the server -->
-    <!-- mvn liberty:install-feature -->
-    <!-- mvn liberty:start -->
+    <!-- To run admincenter : -->
     <!-- Navigate to http://localhost:9080/adminCenter/ -->
-    <!-- ... -->
 
     <!-- To generate and view swagger-ui:
          Package and deploy the war and start the appserver.
@@ -127,15 +123,6 @@
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
-            <!-- To run on new Java versions -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <release>${maven.compiler.release}</release>
-                </configuration>
-            </plugin>
             <!-- Run and verify ...IT.java-tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -151,54 +138,80 @@
                 </executions>
             </plugin>
 
-            <!--<plugin>
+            <!-- Download WebSphere Liberty to target directory and start it -->
+            <!-- See test/resources/arquillian.xml and server.xml for configuration -->
+            <plugin>
                 <groupId>net.wasdev.wlp.maven.plugins</groupId>
                 <artifactId>liberty-maven-plugin</artifactId>
+                <version>3.0.M1</version>
                 <configuration>
-                    &lt;!&ndash; Liberty server to run test against &ndash;&gt;
-                    &lt;!&ndash; Use IBM's liberty in this case, since this one contains the adminCenter, to demonstrate. &ndash;&gt;
+                    <!-- Liberty server to run test against -->
                     <assemblyArtifact>
-                        <groupId>com.ibm.websphere.appserver.runtime</groupId>
-                        <artifactId>wlp-javaee7</artifactId>
-                        <version>19.0.0.9</version>
+                        <groupId>io.openliberty</groupId>
+                        <artifactId>openliberty-runtime</artifactId>
+                        <version>19.0.0.10</version>
                         <type>zip</type>
                     </assemblyArtifact>
+                    <configFile>src/test/resources/server.xml</configFile> <!-- Used to run Arquillian-->
                 </configuration>
                 <executions>
+                    <!-- Create server during package phase for running the application AND Arquillian -->
                     <execution>
-                        <id>install-feature</id>
                         <phase>pre-integration-test</phase>
                         <goals>
-                            <goal>install-feature</goal>
+                            <goal>create-server</goal>
+                        </goals>
+                    </execution>
+                    <!-- Used for running the application, not for Arquillian-->
+                    <execution>
+                        <id>deploy-app</id>
+                        <goals>
+                            <goal>deploy</goal>
                         </goals>
                         <configuration>
-                            <features>
-                                <acceptLicense>true</acceptLicense>
-                                <feature>adminCenter-1.0</feature>
-                            </features>
+                            <appArchive>${project.basedir}\target\${project.build.finalName}.war</appArchive>
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>-->
-            <!-- <plugin>
-                 <groupId>org.apache.maven.plugins</groupId>
-                 <artifactId>maven-dependency-plugin</artifactId>
-                 <version>3.1.1</version>
-                 <configuration>
-                     <artifactItems>
-                         <artifactItem>
-                             <groupId>com.github.phillip-kruger</groupId>
-                             <artifactId>apiee-core</artifactId>
-                             <version>1.0.8</version>
-                             <type>jar</type>
-                             <overWrite>false</overWrite>
-                             <outputDirectory>${project.build.directory}/liberty/wlp/usr/shared/resources
-                             </outputDirectory>
-                             <destFileName>apiee.jar</destFileName>
-                         </artifactItem>
-                     </artifactItems>
-                 </configuration>
-             </plugin>-->
+            </plugin>
+
+            <!-- Copy libraries to WebSphere Liberty -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.1.1</version>
+                <executions>
+                    <!-- Copy database connectors during package phase for running the application AND Arquillian. -->
+                    <!-- Bit overkill as they aren't used in all projects, but it keeps the configuration simpler. -->
+                    <execution>
+                        <id>copy</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>copy-arquillian</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <artifactItems>
+                        <artifactItem>
+                            <groupId>mysql</groupId>
+                            <artifactId>mysql-connector-java</artifactId>
+                            <type>jar</type>
+                            <overWrite>false</overWrite>
+                            <outputDirectory>${project.build.directory}/liberty/wlp/usr/shared/resources
+                            </outputDirectory>
+                            <destFileName>mysql.jar</destFileName>
+                        </artifactItem>
+                    </artifactItems>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
